fixing overlap of footnote

--- a/css/styles.css
+++ b/css/styles.css
@@ -667,7 +667,7 @@ p.info {
 	background-color: #fff;
 }
 .footnote {
-	padding: 30px;
+	padding: 30px 30px 0px 30px;
 	font-size: 12px;
 	font-weight: 200;
 	position: absolute;
